tests/valid/test_record_06.wyal
type ClosedPoint is ({int x,int y} p)
type OpenPoint is ({int x,int y, ...} p)

assert:
    forall(ClosedPoint p):
        p is OpenPoint