tests/invalid/test_034.wyal
type Point1D is ({int x} p)
type OpenPoint is ({int x,int y, ...} p)

assert:
    forall(Point1D p):
        p is OpenPoint